fix(2020) fix overlapping header menu on content pages

--- a/theme/beevibrant/static/css/main.css
+++ b/theme/beevibrant/static/css/main.css
@@ -4853,3 +4853,7 @@ body.tg-comingsoonpage .tg-foorterbar .tg-socialicons{padding:0;}
 	text-shadow:none;
 }
 .tg-alertcontent .tg-btn{float:right;}
+
+#euroscipy-page {
+    margin-top: 100px;
+}
